Document HUD and rv-app entry points

--- a/index.html
+++ b/index.html
@@ -1,3 +1,25 @@
+<!--
+  ============================================================
+    ALTERNATE HUD – PROJECT MAP
+  ------------------------------------------------------------
+    This file is a modern HUD prototype with metrics + controls.
+
+    It:
+      • loads renderer.js
+      • displays session metrics
+      • provides HUD UI/controls
+
+    It does NOT:
+      • embed <rv-app>
+      • reference rv-app
+      • include links to the learning studio
+
+    Notes:
+      • This HUD is separate from renderer/index.html.
+      • Both HUDs omit <rv-app> by design.
+      • rv-app is accessed externally (e.g., “Open RV Studio” button).
+  ============================================================
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
