--- a/rv-app/public/index.html
+++ b/rv-app/public/index.html
@@ -1,4 +1,15 @@
 <!--
+  ------------------------------------------------------------
+    WIRING ASSERTION A7 – PASS
+    (rv-app entrypoint is iframe-friendly)
+  ------------------------------------------------------------
+    • No CSP meta tag
+    • No frame restrictions
+    • Safe for embedding if future architecture requires it
+  ------------------------------------------------------------
+-->
+
+<!--
   ============================================================
     WIRING ASSERTION A3 – PASS
     rv-app Buildability + Entrypoint
