Document audit assertions A8-A10

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -1,4 +1,10 @@
 <!--
+  NOTE (A9 FAIL):
+    HUD does NOT call /api/clips or show clip library UI.
+    Only rv-app has a Library page, and it displays local mnemonics only.
+-->
+
+<!--
   ------------------------------------------------------------
     WIRING ASSERTION A7 – PASS
     (No CSP / No X-Frame-Options)
