--- a/rv-app/public/index.html
+++ b/rv-app/public/index.html
@@ -1,4 +1,10 @@
 <!--
+  HOSTING NOTE:
+  This entrypoint was not originally served by any backend.
+  Must be hosted manually unless static route is added.
+-->
+
+<!--
   ------------------------------------------------------------
     WIRING ASSERTION A7 – PASS
     (rv-app entrypoint is iframe-friendly)
