--- a/renderer/index.html
+++ b/renderer/index.html
@@ -166,7 +166,7 @@
       <div class="row">
         <button onclick="window.downloadSessionLog()">Download Log</button>
         <button id="passport-button" type="button">Passport 📖</button>
-        <button id="open-rv-app" type="button">Open RV Studio</button>
+        <button id="open-rv-app" type="button">RV Studio</button>
         <button id="hud-hide-button" type="button" style="margin-left: auto;">Hide HUD</button>
       </div>
     </div>
