--- a/rv-app/public/index.html
+++ b/rv-app/public/index.html
@@ -1,4 +1,11 @@
 <!--
+  QUICK VERIFICATION NOTE:
+  Build with: npx tsc -p rv-app
+  Serve with: npx http-server rv-app/public -p 4173
+  Then open http://localhost:4173 to verify rv-app is functional.
+-->
+
+<!--
   HOSTING NOTE:
   This entrypoint was not originally served by any backend.
   Must be hosted manually unless static route is added.
