Fix production asset paths and backend startup

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -118,7 +118,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Run the World HUD</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body data-google-client-id="your-google-client-id.apps.googleusercontent.com">
     <div id="hud">
@@ -194,7 +194,7 @@
       window.downloadSessionLog = downloadLog;
     </script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="./passport.js?v=7" type="module"></script>
-    <script src="./renderer.js?v=7" type="module"></script>
+    <script src="passport.js?v=7" type="module"></script>
+    <script src="renderer.js?v=7" type="module"></script>
   </body>
 </html>
