--- a/rv-app/public/index.html
+++ b/rv-app/public/index.html
@@ -80,10 +80,10 @@
     <meta name="theme-color" content="#0ff2c3" />
     <title>RV – Run & Learn</title>
     <link rel="manifest" href="./manifest.webmanifest" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <rv-app></rv-app>
-    <script type="module" src="./build/main.js"></script>
+    <script type="module" src="build/main.js"></script>
   </body>
 </html>
