Add hallucination controls page and settings sync

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -167,6 +167,7 @@
         <button onclick="window.downloadSessionLog()">Download Log</button>
         <button id="passport-button" type="button">Passport 📖</button>
         <button id="open-rv-app" type="button">Open Workahol Enabler</button>
+        <button id="open-hallucination-controls" type="button">Hallucination Controls</button>
         <button id="test-clip-api" type="button">Test Clips API</button>
         <button id="hud-hide-button" type="button" style="margin-left: auto;">Hide HUD</button>
       </div>
