--- a/renderer/passport-page.html
+++ b/renderer/passport-page.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Run the World - Passport</title>
+    <title>RunnyVision - Passport</title>
     <style>
       * {
         margin: 0;
