Create minimal frame demo with theme and frame styles

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Circle Mask Frames</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="theme.css" />
+    <link rel="stylesheet" href="frames.css" />
   </head>
   <body>
-    <main class="layout">
-      <div class="frame-box">
-        <h1>Custom Frame Demo</h1>
+    <main class="stack pad-lg">
+      <div class="frame-box pad-lg mt-lg fit">
         <p>
-          This text block uses the rectangle-styled frame with the circle mask. Resize
-          the container and the mask flexes to fit while keeping the custom font
-          applied to all content.
+          This block uses the circle mask as a flexible frame. Resize the window to
+          see how the background scales while the text retains the custom
+          typography.
         </p>
       </div>
-      <div class="frame-circle demo-circle">OK</div>
+      <div class="frame-circle centered mt-lg">OK</div>
     </main>
   </body>
 </html>
