--- a/renderer/index.html
+++ b/renderer/index.html
@@ -185,12 +185,14 @@
     <div id="video-player-container">
       <video
         id="video-player"
-        autoplay
-        loop
-        muted
         playsinline
         aria-label="Session video"
       ></video>
+      <div id="video-controls" aria-label="Video controls">
+        <button id="video-play" type="button" class="frame-rect">Play</button>
+        <button id="video-pause" type="button" class="frame-rect">Pause</button>
+        <button id="video-stop" type="button" class="frame-rect">Stop</button>
+      </div>
       <div style="position: fixed; top: 10px; right: 10px; background: red; color: white; padding: 5px; z-index: 99999;">v7-FIXED</div>
     </div>
 
