--- a/renderer/index.html
+++ b/renderer/index.html
@@ -117,7 +117,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RunnyVision HUD</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css?v=10" />
   </head>
   <body data-google-client-id="your-google-client-id.apps.googleusercontent.com">
     <div id="hud">
@@ -193,7 +193,6 @@
         <button id="video-pause" type="button" class="frame-rect">Pause</button>
         <button id="video-stop" type="button" class="frame-rect">Stop</button>
       </div>
-      <div style="position: fixed; top: 10px; right: 10px; background: red; color: white; padding: 5px; z-index: 99999;">v7-FIXED</div>
     </div>
 
     <div id="fx-overlay" aria-hidden="true"></div>
@@ -205,6 +204,6 @@
     </script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="passport.js?v=7" type="module"></script>
-    <script src="renderer.js?v=7" type="module"></script>
+    <script src="renderer.js?v=12" type="module"></script>
   </body>
 </html>
