Ensure shared frame theme loads across surfaces

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Run Overlay</title>
+    <link rel="stylesheet" href="/assets/frame-theme.css" />
     <style>
       :root {
         color-scheme: dark;
-        font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+        font-family: var(--rv-font);
         background-color: #030712;
         color: #e2e8f0;
       }
