--- a/public/tools/stage-template.html
+++ b/public/tools/stage-template.html
@@ -28,6 +28,11 @@
       display: inline-block;
     }
 
+    /* Apply ballpoint ink filter to all text for notebook aesthetic */
+    text {
+      filter: url(#ballpoint-ink);
+    }
+
     /* Individual positions — no shared spacing or alignment systems. */
     .node-orbit { top: 32px; left: 44px; width: 130px; height: 130px; }
     .node-beacon { top: 118px; left: 128px; width: 120px; height: 110px; }
@@ -39,6 +44,29 @@
   </style>
 </head>
 <body>
+  <!-- Import ballpoint ink filter for reuse across all text nodes -->
+  <svg width="0" height="0" style="position: absolute;">
+    <defs>
+      <filter id="ballpoint-ink" x="-5%" y="-5%" width="110%" height="110%" color-interpolation-filters="sRGB">
+        <feTurbulence type="fractalNoise" baseFrequency="0.25 0.35" numOctaves="2" seed="11" result="paperGrain" />
+        <feComponentTransfer in="paperGrain" result="inkFlow">
+          <feFuncR type="table" tableValues="0.48 0.52 0.56" />
+          <feFuncG type="table" tableValues="0.48 0.52 0.56" />
+          <feFuncB type="table" tableValues="0.48 0.52 0.56" />
+        </feComponentTransfer>
+        <feDisplacementMap in="SourceGraphic" in2="inkFlow" scale="0.65" xChannelSelector="R" yChannelSelector="G" result="waveredInk" />
+        <feGaussianBlur in="waveredInk" stdDeviation="0.35" result="featheredInk" />
+        <feComponentTransfer in="featheredInk" result="inked">
+          <feFuncR type="gamma" amplitude="0.98" exponent="0.9" offset="0" />
+          <feFuncG type="gamma" amplitude="0.98" exponent="0.9" offset="0" />
+          <feFuncB type="gamma" amplitude="0.98" exponent="0.9" offset="0" />
+          <feFuncA type="table" tableValues="0 0.16 0.42 0.78 1" />
+        </feComponentTransfer>
+        <feComposite in="inked" in2="inkFlow" operator="arithmetic" k1="0" k2="1" k3="0.08" k4="0" result="finalInk" />
+      </filter>
+    </defs>
+  </svg>
+
   <!-- The stage is a flat field; think of it as a navigation chart where each marker is manually dropped. -->
   <div id="stage">
     <!-- Absolute positioning keeps every marker detached from document flow so their relationships stay deliberate. -->
